<resources>
    <string name="app_name">Food_Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food Diary</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Log Out</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_biodata">Biodata</string>
    <string name="menu_meals">Meals</string>

    <string name="biodata_date">03.04.2020</string>
    <string name="biodata_mass">80kg</string>
    <string name="biodata_id">1</string>
    <string name="biodata_bmi">BMI: 25.0</string>
    <string name="biodata_add_title">Insert your biodata:</string>
    <string name="biodata_hint_date">Date</string>
    <string name="biodata_hint_height">Height [cm]</string>
    <string name="biodata_hint_mass">Mass [kg]</string>
    <string name="biodata_add_button">OK</string>

    <string name="meal_id">1</string>
    <string name="meal_name">Nazwa</string>
    <string name="meal_energy">325</string>
    <string name="meal_protein">65</string>
    <string name="meal_fat">54</string>
    <string name="meal_carb">120</string>

    <string name="meal_add_title">Insert your meal data:</string>
    <string name="meal_add_name">Name</string>
    <string name="meal_add_mass">Mass of portion</string>
    <string name="meal_add_portions">Amount of portions</string>
    <string name="meal_add_energy">Energy of portion [kcal]</string>
    <string name="meal_add_carb">Carbohydrates [g]</string>
    <string name="meal_add_protein">Protein [g]</string>
    <string name="meal_add_fat">Fat [g]</string>

    <string name="meal_date_tv"> "   Date: "</string>
    <string name="meal_breakfast_tv"> "   Breakfast: "</string>
    <string name="meal_lunch_tv"> "   Lunch: "</string>
    <string name="meal_dinner_tv"> "   Dinner: "</string>
    <string name="meal_snacks_tv"> "   Snacks: "</string>
    <string name="meal_calories_tv"> "   Suma kalorii: "</string>

    <string name="saved_date"> "SAVED_DATE"</string>

    <string-array name="kind_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snacks</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="meal_protein_sign">p:</string>
    <string name="meal_fat_sign">f:</string>
    <string name="meal_carb_sign">c:</string>
    <string name="meal_energy_sign">e:</string>


</resources>
