<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/biodata_id_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/biodata_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/biodata_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biodata_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@id/biodata_id_tv"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/biodata_mass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biodata_mass"
            android:textSize="20sp"
            android:maxLines="1"
            android:layout_below="@id/biodata_date_tv"/>
        <TextView
            android:id="@+id/biodata_bmi_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biodata_bmi"
            android:textSize="20sp"
            android:maxLines="1"
            android:layout_below="@id/biodata_mass_tv"/>

    </RelativeLayout>
</LinearLayout>