<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/meal_add_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/meal_add_title"
            android:textSize="20sp"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/meal_add_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_name"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <Spinner
            android:id="@+id/meal_add_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_name"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey"
            android:minHeight="18sp"/>
        <!--        android:entries="@array/meal_arrays"-->

        <EditText
            android:id="@+id/meal_add_mass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_mass"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/meal_add_portions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_portions"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/meal_add_energy"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_energy"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/meal_add_carb"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_carb"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/meal_add_protein"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_protein"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <EditText
            android:id="@+id/meal_add_fat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent"
            android:hint="@string/meal_add_fat"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="@color/colorGrey"
            android:textColorHint="@color/colorGrey" />

        <Button
            android:id="@+id/biodata_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/biodata_add_button" />

    </LinearLayout>

</LinearLayout>